      with a patch by TOKUHIROM. (ISHIGAKI)
    - skip 70schemachange test for Windows users. (ISHIGAKI)
    - applied RT patches including #29497, #32723, #30558,
      #34408, #36467, #37215, #41047. (ISHIGAKI)
    - added TODO to show which issues are to be fixed. (ISHIGAKI)
    - license and configure_requires in Makefile.PL and META.yml (Alexandr Ciornii)

1.14
    - Updated to SQLite 3.4.2
    - Switch to sqlite3_prepare_v2 which fixes a number of bugs
      with re-using statements
    - Fix bug with overflowing integers in user defined functions
    - Fix bug when building under no-threads perl

1.13
	- A number of bug fixes from RT.
	- Support named bind parameters

1.12
	- Brought up to date with SQLite 3.3.5

1.11
    - Make blobs work transparently (without SQLBLOB binding)

1.10
    - Fix Unicode support (DOMQ)
    - Support usleep on all Linux (inc. debian) (DOMQ)
    - Upgrade to sqlite 3.2.7
    - Document how to use BLOBS

1.09
    - Support external SQLite library (rjray)
    - Don't convert things that look like numbers to numbers unless
      specifically requested.
    - Upgrade to sqlite 3.2.2

1.08
    - Support 64 bit integers (uses floating point numbers when perl is not 
        compiled with 64 bit int support). This also fixes issues with using
        sqlite timestamps.
    - Upgrade to sqlite 3.1.3
    - Fix issues of not finding rows when providing a number that perl sees as
        a string.
    - Fixes for most current bugs in RT (see http://rt.cpan.org/ to check if your
      favourite bug got fixed).
    
1.07
    - Fix for a memory leak (spotted by Joel Noble)
    - Update to sqlite 3.0.8 (fixes bug on Solaris-sparc)

1.06
    - Resolve symbol conflicts on mac os x.
    - Fix define in WriteMakefile lacking space.
    - Fix DBI prereq in Makefile.PL
    - Update to sqlite 3.0.7

1.05
    - Enabled HAVE_USLEEP where available which should massively
      improve concurrent usage of DBD::SQLite
    - Update to sqlite 3.0.6

1.04